# railway-impact-simulator

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  BUILD_PORTABLE_CLI.cmd  BUILD_PORTABLE_UI.cmd  CITATION_REFERENCE.md  CLAUDE.md  CONTACT_MODEL_VERIFICATION.md  DEVELOPER_GUIDE.md  ENERGY_BALANCE_INVESTIGATION.md  ENERGY_BALANCE_INVESTIGATION_SUMMARY.md  ENERGY_BUG_ANALYSIS.md  EULER_LAGRANGE_ENERGY_BALANCE.md  FINAL_CLEANUP_REPORT.md  HERR_FAECKE_VERIFICATION.md  LICENSE  MASS_CONTACT_IMPLEMENTATION.md  Makefile  OPTIMIZATION_AND_BUGFIX_REPORT.md  PATCH_README.md  PATCH_REPORT.md  PROJECT_SUMMARY.md  README.md  README_EN15227_GENERATED.md  TEST_PORTABLE_BUNDLE.cmd  VALIDATION_Pioneer.md  VALIDATION_SUMMARY.md  herr_faecke_diagnostic.py  portable_tests_and_ruff_fix_git.patch  pyproject.toml  railway-impact-simulator.py  run_contact_regression_sweep.py
.github/: copilot-instructions.md
.ipynb_checkpoints/: railway-impact-simulator-checkpoint.py
configs/: generic_passenger.yml  generic_passenger_EN15227_129t_wall.yml  ice1_80kmh.yml  ice1_aluminum.yml  ice1_coach.yml  ice1_full_dissertation.yml  ice1_full_steel_dissertation.yml  ice1_powercar.yml  ice1_single_wagon_dissertation.yml  ice1_steel.yml  ice1_trainset_14car.yml  mi_en15227_c1.yml  mi_en15227_c2.yml  mi_en15227_c3.yml  traxx_freight.yml
configs/en15227/: README_EN15227_GENERATED.md  generic_passenger__EN15227_C1.yml  generic_passenger__EN15227_C2.yml  generic_passenger__EN15227_C3.yml  ice1_aluminum__EN15227_C1.yml  ice1_aluminum__EN15227_C2.yml  ice1_aluminum__EN15227_C3.yml  ice1_coach__EN15227_C1.yml  ice1_coach__EN15227_C2.yml  ice1_coach__EN15227_C3.yml  ice1_powercar__EN15227_C1.yml  ice1_powercar__EN15227_C2.yml  ice1_powercar__EN15227_C3.yml  ice1_steel__EN15227_C1.yml  ice1_steel__EN15227_C2.yml  ice1_steel__EN15227_C3.yml  ice1_trainset_14car__EN15227_C1.yml  ice1_trainset_14car__EN15227_C2.yml  ice1_trainset_14car__EN15227_C3.yml  traxx_freight__EN15227_C1.yml  traxx_freight__EN15227_C2.yml  traxx_freight__EN15227_C3.yml
configs/studies/: impact_parametric_mini.yml
data/en15227/: interfaces.yaml  partners.yaml  scenarios.yaml
docs/: AUDIT_REPORT_2026-01-10.md  CONTACT_MODEL_VERIFICATION.md  DELIVERABLES.md  PARAMETRIC_STUDIES.md  PLANNING.md  PROJECT_WORKFLOW.md  TASKS.md  WORKLOG.md  WORKPLAN_EXECUTION_CLI_WORKFLOW.md  WORKPLAN_EXECUTION_LATEX_CHAPTER.md  WORKPLAN_EXECUTION_MVP.md  WORKPLAN_EXECUTION_UI_REPORT_BUNDLE.md  WORKPLAN_EXECUTION_UI_WORKBENCH.md  config_schema.md  damping_model.md
examples/: ice1_aluminum_minimal.py  parametric_line_mix.py
projects/impact_workbench/: project.sqlite
projects/stempi_workbench/: project.sqlite
scripts/: export_tables.py  generate_figures.py  generate_stempi_full_train_table.py  generate_stempi_runout_table.py  migrate_yaml_configs.py  run_parametric_study.py  run_stempi_full_train_case_cache.py
scripts/legacy/: README.md  generate_stempi_full_train_table.py  generate_stempi_runout_table.py  run_stempi_full_train_case_cache.py
sim/: result.py
src/railway_simulator/: __init__.py  cli.py  terminal_monitor.py  workbench_cli.py
src/railway_simulator/config/: __init__.py  laws.py  loader.py  models.py  presets.py
src/railway_simulator/core/: __init__.py  app.py  app_backup.py  contact.py  contact_state.py  engine.py  friction.py  integrator.py  parametric.py  report.py
src/railway_simulator/domain/: __init__.py  common.py  project.py  result.py  scenario.py  spectrum.py  study.py  vehicle.py
src/railway_simulator/hazard/: __init__.py  deterministic.py  engine_bridge.py  lateral.py  metamodel.py  montecarlo.py  rate.py  runout.py  (+1 more)
tests/: test_config_loader.py  test_confirmed_numerical_bugs.py  test_contact_inexact_acceptance.py  test_contact_state.py  test_contact_state_regression.py  test_convergence_study.py  test_damping_model.py  test_energy_balance.py  test_fixed_dif_sensitivity.py  test_full_train_study.py  test_hazard_deterministic.py  test_hazard_engine_bridge.py  test_hazard_lateral.py  test_hazard_metamodel.py  test_hazard_montecarlo.py  test_hazard_runout_rate.py  test_hazard_sdof.py  test_latex_chapter_report.py  test_mass_contact.py  test_newton_residual_scaling.py  test_numerics_sensitivity.py  test_parametric_grid.py  test_parametric_grid_cli.py  test_parametric_grid_io.py  test_parametric_grid_persistence.py  test_picard_backcompat.py  test_portable_bundle.py  test_project_database.py  test_project_repository_read_models.py  test_project_workbench.py  test_set_by_path.py  test_solver_fallback.py  test_spectrum_service.py  test_strain_rate.py  test_strain_rate_models.py  test_studies_utils.py  test_time_normalization.py  test_workbench_cli.py
tests/helpers/: force_reporting.py  reduced_oracles.py
tools/: debug_traxx_mass_contact.py  run_traxx_debug_final.py
tools/windows-portable/: Build_Portable_Bundle.ps1  README_PORTABLE.md  Test_Portable_Bundle.ps1
(+35 files in other folders)
