[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "railway-impact-simulator"
version = "0.2.0"
authors = [
  { name = "Sebastián Labbé", email = "sflabbe@uc.cl" }
]
description = "HHT-α railway impact simulator with Bouc–Wen hysteresis based on DZSF Bericht 53 (2024)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

# --- CORE deps ---
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "pandas>=2.0",
  # Typer does not define an "all" extra on recent releases; list useful
  # CLI niceties explicitly to avoid pip warnings.
  "typer>=0.12",
  "rich>=10.11.0",
  "shellingham>=1.3.0",
  "PyYAML>=6.0",
  "plotly>=5.0",
  "pydantic>=2.6",
]

[project.optional-dependencies]
# --- UI deps ---
ui = [
  "streamlit>=1.35",
  "pyarrow<22,>=7.0",
  "openpyxl>=3.1",
]

[project.scripts]
railway-sim = "railway_simulator.cli:main"

[project.urls]
Homepage = "https://github.com/sflabbe/railway-impact-simulator"
Source = "https://github.com/sflabbe/railway-impact-simulator"
"Issue Tracker" = "https://github.com/sflabbe/railway-impact-simulator/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
railway_simulator = ["persistence/schema.sql"]


[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  "dist_portable",
  "RailwayImpactSimulator_Portable_Windows",
  # Historical/debug scripts are kept as engineering scratchpads. They are
  # still covered by compileall, but production linting is scoped to package,
  # tests, docs, configs, and maintained scripts.
  "tools/debug_traxx_mass_contact.py",
  "tools/run_traxx_debug_final.py",
]

[tool.ruff.lint.per-file-ignores]
# Legacy scripts insert repo paths before importing the package so they remain
# executable outside an installed environment. Keep that compatibility pattern.
"scripts/legacy/*.py" = ["E402"]

[tool.pytest.ini_options]
# Keep pytest temp dirs inside the repository. On Windows some machines lock
# %TEMP%/pytest-of-<user>, which otherwise breaks any test using tmp_path.
addopts = "--basetemp=.pytest-tmp"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [
  ".git",
  ".hg",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "venv",
  "build",
  "dist",
  "dist_portable",
  "RailwayImpactSimulator_Portable_Windows",
  "*.egg-info",
]
markers = [
  "slow: marks tests as slow (deselect with '-m not slow')",
]
